2005-03-11 Dalibor Topic <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-10  Chris Burdess  <dog@bluezoo.org>

        * gnu/xml/dom/ls/SAXEventSink.java: Ignore element declarations if
        not currently parsing the DTD.

2005-03-11 Dalibor Topic <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-03-10  Audrius Meskauskas  <audriusa@bluewin.ch>

        * javax/swing/text/ChangedCharSetException.java,
        javax/swing/text/html/HTMLEditorKit.java,
        javax/swing/text/html/HTMLFrameHyperlinkEvent.java,
        javax/swing/text/html/parser/AttributeList.java,
        javax/swing/text/html/parser/ContentModel.java,
        javax/swing/text/html/parser/DocumentParser.java,
        javax/swing/text/html/parser/DTD.java,
        javax/swing/text/html/parser/DTDConstants.java,
        javax/swing/text/html/parser/Element.java,
        javax/swing/text/html/parser/Entity.java,
        javax/swing/text/html/parser/Parser.java,
        javax/swing/text/html/parser/TagElement.java,
        gnu/javax/swing/text/html/package.html,
        gnu/javax/swing/text/html/parser/gnuDTD.java,
        gnu/javax/swing/text/html/parser/HTML_401F.java,
        gnu/javax/swing/text/html/parser/htmlAttributeSet.java,
        gnu/javax/swing/text/html/parser/htmlValidator.java,
        gnu/javax/swing/text/html/parser/package.html,
        gnu/javax/swing/text/html/parser/models/list.java,
        gnu/javax/swing/text/html/parser/models/node.java,
        gnu/javax/swing/text/html/parser/models/noTagModel.java,
        gnu/javax/swing/text/html/parser/models/package.html,
        gnu/javax/swing/text/html/parser/models/PCDATAonly_model.java,
        gnu/javax/swing/text/html/parser/models/TableRowContentModel.java,
        gnu/javax/swing/text/html/parser/models/transformer.java,
        gnu/javax/swing/text/html/parser/support/gnuStringIntMapper.java,
        gnu/javax/swing/text/html/parser/support/package.html,